# my-norif-2025

./: Cargo.toml  LICENSE  README.md  build.rs
src/: icon_data.rs  main.rs
