[package]
name = "my-norif-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.19.2"
winrt-toast = "0.1.1"
local-ip-address = "0.6.3"
rfd = "0.15.2"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
]

[build-dependencies]
image = "0.25.5"
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "my-norif-2025.exe"
ProductName = "my-norif-2025"
LegalCopyright = "Copyright (C) 2025 horyu"
ProductVersion = "0.1.0.0"
FileVersion = "0.1.0.0"
FileDescription = "https://github.com/horyu/my-norif-2025/blob/master/README.md"
